# SFRTS

./: .gitignore  CMakeLists.txt
include/Animation/: Animation.hpp
src/: CmakeLists.txt  main.cpp
src/Animation/: Animation.cpp  Animation.hpp  CmakeLists.txt
src/Animator/: Animator.cpp  Animator.hpp  CMakeLists.txt
src/GameApp/: CMakeLists.txt  CmakeLists.txt  GameApp.cpp  GameApp.h  GameApp.hpp
src/Units/: CmakeLists.txt  Unit.cpp  Unit.hpp
src/game_app/: CmakeLists.txt  game_app.cpp  game_app.h
